--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -1,13 +1,48 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Admin Portal</title>
+<!doctype html>
+<html class="no-js" lang="en">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <title>
+            ModularAdmin - Free Dashboard Theme | HTML Version
+        </title>
+        <title>Admin Portal</title>
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
+        <!-- Place favicon.ico in the root directory -->
+        <!-- <link rel="stylesheet" href="css/vendor.css"> -->
+        <!-- Theme initialization -->
+        <!-- <script>
+            var themeSettings = (localStorage.getItem('themeSettings'))
+                ? JSON.parse(localStorage.getItem('themeSettings'))
+                : {};
+            var themeName = themeSettings.themeName || '';
+            if (themeName) {
+                document.write('<link rel="stylesheet" id="theme-style" href="css/app-' + themeName + '.css">');
+            } else {
+                document.write('<link rel="stylesheet" id="theme-style" href="css/app.css">');
+            }
+        </script> -->
 
-    <%#= stylesheet_link_tag    'admin/managing', media: 'all', 'data-turbolinks-track' => true %>
-    <%= javascript_include_tag 'admin/managing', 'data-turbolinks-track' => true %>
+        <%= stylesheet_link_tag    'admin/managing', media: 'all', 'data-turbolinks-track' => true %>
+    </head>
 
-  </head>
-  <body>
-  </body>
+    <body>
+        <div class="main-wrapper">
+          <%= yield %>
+        </div>
+        <!-- Reference block for JS -->
+        <div class="ref" id="ref">
+            <div class="color-primary"></div>
+            <div class="chart">
+                <div class="color-primary"></div>
+                <div class="color-secondary"></div>
+            </div>
+        </div>
+        <!-- <script src="js/vendor.js"></script>
+        <script src="js/app.js"></script> -->
+        <%= javascript_include_tag 'admin/managing', 'data-turbolinks-track' => true %>
+    </body>
+
 </html>
