--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -30,7 +30,12 @@
 
     <body>
         <div class="main-wrapper">
-          <%= yield %>
+          <div class="app" id="app">
+            <%= render 'admin/header' %>
+            <%= render 'admin/aside' %>
+            <%= yield %>
+            <%= render 'admin/footer' %>
+          </div>
         </div>
         <!-- Reference block for JS -->
         <div class="ref" id="ref">
@@ -40,8 +45,7 @@
                 <div class="color-secondary"></div>
             </div>
         </div>
-        <!-- <script src="js/vendor.js"></script>
-        <script src="js/app.js"></script> -->
+
         <%= javascript_include_tag 'admin/managing', 'data-turbolinks-track' => true %>
     </body>
 
