update admin page

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -25,7 +25,7 @@
             }
         </script> -->
 
-        <%= stylesheet_link_tag    'admin/managing', media: 'all', 'data-turbolinks-track' => true %>
+        <%= stylesheet_link_tag    'admin/portal', media: 'all', 'data-turbolinks-track' => true %>
     </head>
 
     <body>
@@ -46,7 +46,7 @@
             </div>
         </div>
 
-        <%= javascript_include_tag 'admin/managing', 'data-turbolinks-track' => true %>
+        <%= javascript_include_tag 'admin/portal', 'data-turbolinks-track' => true %>
     </body>
 
 </html>
