--- a/app/views/admin/_aside.html.erb
+++ b/app/views/admin/_aside.html.erb
@@ -10,18 +10,24 @@
                         <span class="l l4"></span>
                         <span class="l l5"></span>
                     </div>
-                    Modular Admin
+                    Daydash Admin
                 </div>
             </div>
             <nav class="menu">
                 <ul class="nav metismenu" id="sidebar-menu">
-                    <li class="active">
-                        <a href="index.html">
-                            <i class="fa fa-home"></i>
-                            Dashboard
-                        </a>
+                    <li>
+                      <%= link_to admin_dashboard_path do %>
+                        <i class="fa fa-home"></i>
+                        Dashboard
+                      <% end %>
                     </li>
                     <li>
+                      <%= link_to admin_event_path do %>
+                        <i class="fa fa-home"></i>
+                        Event
+                      <% end %>
+                    </li>
+                    <!-- <li>
                         <a href="">
                             <i class="fa fa-th-large"></i>
                             Items Manager
@@ -167,11 +173,11 @@
                             <i class="fa fa-github-alt"></i>
                             Theme Docs
                         </a>
-                    </li>
+                    </li> -->
                 </ul>
             </nav>
         </div>
-        <footer class="sidebar-footer">
+        <!-- <footer class="sidebar-footer">
             <ul class="nav metismenu" id="customize-menu">
                 <li>
                     <ul>
@@ -268,6 +274,6 @@
                     </a>
                 </li>
             </ul>
-        </footer>
+        </footer> -->
     </aside>
     <div class="sidebar-overlay" id="sidebar-overlay"></div>
