--- a/app/views/admin/_footer.html.erb
+++ b/app/views/admin/_footer.html.erb
@@ -1,6 +1,6 @@
 
 <footer class="footer">
-    <div class="footer-block buttons">
+    <!-- <div class="footer-block buttons">
         <iframe class="footer-github-btn" src="https://ghbtns.com/github-btn.html?user=modularcode&repo=modular-admin-html&type=star&count=true" frameborder="0" scrolling="0" width="140px" height="20px"></iframe>
     </div>
     <div class="footer-block author">
@@ -13,7 +13,7 @@
                 <a href="https://github.com/modularcode/modular-admin-html#get-in-touch">get in touch</a>
             </li>
         </ul>
-    </div>
+    </div> -->
 </footer>
 <div class="modal fade" id="modal-media">
     <div class="modal-dialog modal-lg">
