--- a/app/views/admin/_header.html.erb
+++ b/app/views/admin/_header.html.erb
@@ -13,7 +13,7 @@
             </div>
         </form>
     </div>
-    <div class="header-block header-block-buttons">
+    <!-- <div class="header-block header-block-buttons">
         <a href="https://github.com/modularcode/modular-admin-html" class="btn btn-oval btn-sm rounded-s header-btn">
             <i class="fa fa-github-alt"></i>
             View on GitHub
@@ -22,10 +22,10 @@
             <i class="fa fa-cloud-download"></i>
             Download .zip
         </a>
-    </div>
+    </div> -->
     <div class="header-block header-block-nav">
         <ul class="nav-profile">
-            <li class="notifications new">
+            <!-- <li class="notifications new">
                 <a href="" data-toggle="dropdown">
                     <i class="fa fa-bell-o"></i>
                     <sup>
@@ -87,7 +87,7 @@
                         </ul>
                     </footer>
                 </div>
-            </li>
+            </li> -->
             <li class="profile dropdown">
                 <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">
                     <div class="img" style="background-image: url('https://avatars3.githubusercontent.com/u/3959008?v=3&s=40')"></div>
