--- a/app/views/admin/_aside.html.erb
+++ b/app/views/admin/_aside.html.erb
@@ -27,6 +27,12 @@
                         Event
                       <% end %>
                     </li>
+                    <li>
+                      <%= link_to admin_event_path do %>
+                        <i class="fa fa-home"></i>
+                        User
+                      <% end %>
+                    </li>
                     <!-- <li>
                         <a href="">
                             <i class="fa fa-th-large"></i>
