--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -52,7 +52,7 @@
           <!--
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li> -->
-          <li><%= link_to 'Organizer', organizer_index_path %></li>
+          <li><%= link_to 'Organizer', organizers_index_path %></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
             <ul class="dropdown-menu">
