add structure event and user of admin portal

--- a/app/views/admin/_aside.html.erb
+++ b/app/views/admin/_aside.html.erb
@@ -16,19 +16,19 @@
             <nav class="menu">
                 <ul class="nav metismenu" id="sidebar-menu">
                     <li>
-                      <%= link_to admin_dashboard_path do %>
+                      <%= link_to admin_path do %>
                         <i class="fa fa-home"></i>
                         Dashboard
                       <% end %>
                     </li>
                     <li>
-                      <%= link_to admin_event_path do %>
+                      <%= link_to admin_events_path do %>
                         <i class="fa fa-home"></i>
                         Event
                       <% end %>
                     </li>
                     <li>
-                      <%= link_to admin_event_path do %>
+                      <%= link_to admin_users_path do %>
                         <i class="fa fa-home"></i>
                         User
                       <% end %>
