--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -4,13 +4,13 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3 class="title">
-                        Items
-                        <a href="item-editor.html" class="btn btn-primary btn-sm rounded-s">
+                        Events
+                        <%= link_to "Add New", new_admin_event_path, class: 'btn btn-primary btn-sm rounded-s' %>
+                        <!-- <a href="item-editor.html" class="btn btn-primary btn-sm rounded-s">
                             Add New
                         </a>
-                        <!--
--->
-                        <div class="action dropdown">
+                        -->
+                        <!-- <div class="action dropdown">
                             <button class="btn  btn-sm rounded-s btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 More actions...
                             </button>
@@ -20,11 +20,11 @@
                                 <a class="dropdown-item" href="#" data-toggle="modal" data-target="#confirm-modal">
                                     <i class="fa fa-close icon"></i>Delete</a>
                             </div>
-                        </div>
+                        </div> -->
                     </h3>
-                    <p class="title-description">
+                    <!-- <p class="title-description">
                         List of sample items - e.g. books, movies, events, etc...
-                    </p>
+                    </p> -->
                 </div>
             </div>
         </div>
@@ -156,6 +156,7 @@
                             <div class="item-actions-block">
                                 <ul class="item-actions-list">
                                     <li>
+
                                         <a class="remove" href="#" data-toggle="modal" data-target="#confirm-modal">
                                             <i class="fa fa-trash-o "></i>
                                         </a>
