--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -4,9 +4,27 @@
             <div class="row">
                 <div class="col-md-6">
                     <h3 class="title">
-                        Users
+                        Events
                         <%= link_to "Add New", new_admin_event_path, class: 'btn btn-primary btn-sm rounded-s' %>
+                        <!-- <a href="item-editor.html" class="btn btn-primary btn-sm rounded-s">
+                            Add New
+                        </a>
+                        -->
+                        <!-- <div class="action dropdown">
+                            <button class="btn  btn-sm rounded-s btn-secondary dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                More actions...
+                            </button>
+                            <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <a class="dropdown-item" href="#">
+                                    <i class="fa fa-pencil-square-o icon"></i>Mark as a draft</a>
+                                <a class="dropdown-item" href="#" data-toggle="modal" data-target="#confirm-modal">
+                                    <i class="fa fa-close icon"></i>Delete</a>
+                            </div>
+                        </div> -->
                     </h3>
+                    <!-- <p class="title-description">
+                        List of sample items - e.g. books, movies, events, etc...
+                    </p> -->
                 </div>
             </div>
         </div>
@@ -35,7 +53,7 @@
                     </div>
                     <div class="item-col item-col-header fixed item-col-img md">
                         <div>
-                            <span>Picture</span>
+                            <span>Media</span>
                         </div>
                     </div>
                     <div class="item-col item-col-header item-col-title">
@@ -45,17 +63,27 @@
                     </div>
                     <div class="item-col item-col-header item-col-sales">
                         <div>
-                            <span>Gender</span>
+                            <span>Sales</span>
                         </div>
                     </div>
                     <div class="item-col item-col-header item-col-stats">
                         <div class="no-overflow">
-                            <span>Role</span>
+                            <span>Stats</span>
+                        </div>
+                    </div>
+                    <div class="item-col item-col-header item-col-category">
+                        <div class="no-overflow">
+                            <span>Category</span>
+                        </div>
+                    </div>
+                    <div class="item-col item-col-header item-col-author">
+                        <div class="no-overflow">
+                            <span>Author</span>
                         </div>
                     </div>
                     <div class="item-col item-col-header item-col-date">
                         <div>
-                            <span>Joined At</span>
+                            <span>Published</span>
                         </div>
                     </div>
                     <div class="item-col item-col-header fixed item-col-actions-dropdown"></div>
@@ -85,6 +113,24 @@
                             </a>
                         </div>
                     </div>
+                    <div class="item-col item-col-sales">
+                        <div class="item-heading">Sales</div>
+                        <div>
+                            46323
+                        </div>
+                    </div>
+                    <div class="item-col item-col-stats no-overflow">
+                        <div class="item-heading">Stats</div>
+                        <div class="no-overflow">
+                            <div class="item-stats sparkline" data-type="bar"></div>
+                        </div>
+                    </div>
+                    <div class="item-col item-col-category no-overflow">
+                        <div class="item-heading">Category</div>
+                        <div class="no-overflow">
+                            <a href="">Software</a>
+                        </div>
+                    </div>
                     <div class="item-col item-col-author">
                         <div class="item-heading">Author</div>
                         <div class="no-overflow">
@@ -97,7 +143,7 @@
                             21 SEP 10:45
                         </div>
                     </div>
-<!--                     <div class="item-col fixed item-col-actions-dropdown">
+                    <div class="item-col fixed item-col-actions-dropdown">
                         <div class="item-actions-dropdown">
                             <a class="item-actions-toggle-btn">
                                 <span class="inactive">
@@ -123,7 +169,7 @@
                                 </ul>
                             </div>
                         </div>
-                    </div> -->
+                    </div>
                 </div>
             </li>
 
