--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -5,7 +5,7 @@
                 <div class="col-md-6">
                     <h3 class="title">
                         Items
-                        <a href="item-editor.html" class="btn btn-primary btn-sm rounded-s">
+                        <a href="<%= new_admin_event_path %>" class="btn btn-primary btn-sm rounded-s">
                             Add New
                         </a>
                         <!--
