--- a/app/views/admin/_aside.html.erb
+++ b/app/views/admin/_aside.html.erb
@@ -24,13 +24,13 @@
                     <li>
                       <%= link_to admin_events_path do %>
                         <i class="fa fa-home"></i>
-                        Event
+                        Events
                       <% end %>
                     </li>
                     <li>
                       <%= link_to admin_users_path do %>
                         <i class="fa fa-home"></i>
-                        User
+                        Users
                       <% end %>
                     </li>
                     <!-- <li>
