--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,29 +1,39 @@
-<h2>Sign up</h2>
+<p class="text-xs-center">Sign Up</p>
+
+<br>
+  <center>
+    <%= render "users/shared/social" %>
+  </center>
+<br>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
+  <div class="form-group">
+    <%= f.label :email %>
+    <%= f.email_field :email, autofocus: true, class: 'form-control underlined', name: :email, id: :email, placeholder: 'Your email address', required: true %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :password %>
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
+      <em>(<%= @minimum_password_length %> characters minimum)</em>
+    <% end %>
+    <%= f.password_field :password, autocomplete: 'off', class: 'form-control underlined', name: :password, id: :password, placeholder: 'Your password', required: true %>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
+  <div class="form-group">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control underlined', name: :password, id: :password, placeholder: 'Confirm your password', required: true %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Sign up" %>
+  <div class="form-group">
+    <%= f.submit "Sign up", class: 'btn btn-block btn-primary' %>
+  </div>
+
+  <div class="form-group">
+    <p class="text-muted text-xs-center">Already have an account?
+      <%= render "users/shared/signin" %>
+    </p>
   </div>
 <% end %>
-
-<%= render "users/shared/links" %>
