--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -11,7 +11,7 @@
 
   <div class="form-group">
     <%= f.label :email %>
-    <%= f.email_field :email, autofocus: true, class: 'form-control underlined', name: :email, id: :email, placeholder: 'Your email address', required: true %>
+    <%= f.email_field :email, autofocus: true, class: 'form-control underlined', placeholder: 'Your email address', required: true %>
   </div>
 
   <div class="form-group">
@@ -19,12 +19,12 @@
     <% if @minimum_password_length %>
       <em>(<%= @minimum_password_length %> characters minimum)</em>
     <% end %>
-    <%= f.password_field :password, autocomplete: 'off', class: 'form-control underlined', name: :password, id: :password, placeholder: 'Your password', required: true %>
+    <%= f.password_field :password, autocomplete: 'off', class: 'form-control underlined', placeholder: 'Your password', required: true %>
   </div>
 
   <div class="form-group">
     <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control underlined', name: :password, id: :password, placeholder: 'Confirm your password', required: true %>
+    <%= f.password_field :password_confirmation, autocomplete: 'off', class: 'form-control underlined', placeholder: 'Confirm your password', required: true %>
   </div>
 
   <div class="form-group">
