--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,143 +1,105 @@
-<article class="content item-editor-page">
+<article class="content forms-page">
   <div class="title-block">
     <h3 class="title">
-      Edit Profile<span class="sparkline bar" data-type="bar"></span>
+      Forms
     </h3>
+    <p class="title-description"> Sample form elements </p>
   </div>
-  <form name="item">
-    <div class="card card-block">
-    <div class="form-group row">
-      <label class="col-sm-2 form-control-label text-xs-right"> First name: </label>
-      <div class="col-sm-4">
-        <input type="text" class="form-control boxed" placeholder="">
-      </div>
-      <label class="col-sm-2 form-control-label text-xs-right"> Last name: </label>
-      <div class="col-sm-4">
-        <input type="text" class="form-control boxed" placeholder="">
-      </div>
-    </div>
-    <div class="form-group row">
-      <label class="col-sm-2 form-control-label text-xs-right"> Content: </label>
-      <div class="col-sm-10">
-        <div class="wyswyg">
-          <div class="toolbar">
-            <span class="ql-format-group">
-              <select title="Size" class="ql-size">
-                <option value="10px">Small</option>
-                <option value="13px" selected>Normal</option>
-                <option value="18px">Large</option>
-                <option value="32px">Huge</option>
-              </select>
-            </span>
-            <span class="ql-format-group">
-            <span title="Bold" class="ql-format-button ql-bold"></span> <span class="ql-format-separator"></span> <span title="Italic" class="ql-format-button ql-italic"></span> <span class="ql-format-separator"></span> <span title="Underline" class="ql-format-button ql-underline"></span>                                            <span class="ql-format-separator"></span> <span title="Strikethrough" class="ql-format-button ql-strike"></span> </span>
-            <span class="ql-format-group">
-              <select title="Text Color" class="ql-color">
-                <option value="rgb(0, 0, 0)" label="rgb(0, 0, 0)" selected></option>
-                <option value="rgb(230, 0, 0)" label="rgb(230, 0, 0)"></option>
-                <option value="rgb(255, 153, 0)" label="rgb(255, 153, 0)"></option>
-                <option value="rgb(255, 255, 0)" label="rgb(255, 255, 0)"></option>
-                <option value="rgb(0, 138, 0)" label="rgb(0, 138, 0)"></option>
-                <option value="rgb(0, 102, 204)" label="rgb(0, 102, 204)"></option>
-                <option value="rgb(153, 51, 255)" label="rgb(153, 51, 255)"></option>
-                <option value="rgb(255, 255, 255)" label="rgb(255, 255, 255)"></option>
-                <option value="rgb(250, 204, 204)" label="rgb(250, 204, 204)"></option>
-                <option value="rgb(255, 235, 204)" label="rgb(255, 235, 204)"></option>
-                <option value="rgb(255, 255, 204)" label="rgb(255, 255, 204)"></option>
-                <option value="rgb(204, 232, 204)" label="rgb(204, 232, 204)"></option>
-                <option value="rgb(204, 224, 245)" label="rgb(204, 224, 245)"></option>
-                <option value="rgb(235, 214, 255)" label="rgb(235, 214, 255)"></option>
-                <option value="rgb(187, 187, 187)" label="rgb(187, 187, 187)"></option>
-                <option value="rgb(240, 102, 102)" label="rgb(240, 102, 102)"></option>
-                <option value="rgb(255, 194, 102)" label="rgb(255, 194, 102)"></option>
-                <option value="rgb(255, 255, 102)" label="rgb(255, 255, 102)"></option>
-                <option value="rgb(102, 185, 102)" label="rgb(102, 185, 102)"></option>
-                <option value="rgb(102, 163, 224)" label="rgb(102, 163, 224)"></option>
-                <option value="rgb(194, 133, 255)" label="rgb(194, 133, 255)"></option>
-                <option value="rgb(136, 136, 136)" label="rgb(136, 136, 136)"></option>
-                <option value="rgb(161, 0, 0)" label="rgb(161, 0, 0)"></option>
-                <option value="rgb(178, 107, 0)" label="rgb(178, 107, 0)"></option>
-                <option value="rgb(178, 178, 0)" label="rgb(178, 178, 0)"></option>
-                <option value="rgb(0, 97, 0)" label="rgb(0, 97, 0)"></option>
-                <option value="rgb(0, 71, 178)" label="rgb(0, 71, 178)"></option>
-                <option value="rgb(107, 36, 178)" label="rgb(107, 36, 178)"></option>
-                <option value="rgb(68, 68, 68)" label="rgb(68, 68, 68)"></option>
-                <option value="rgb(92, 0, 0)" label="rgb(92, 0, 0)"></option>
-                <option value="rgb(102, 61, 0)" label="rgb(102, 61, 0)"></option>
-                <option value="rgb(102, 102, 0)" label="rgb(102, 102, 0)"></option>
-                <option value="rgb(0, 55, 0)" label="rgb(0, 55, 0)"></option>
-                <option value="rgb(0, 41, 102)" label="rgb(0, 41, 102)"></option>
-                <option value="rgb(61, 20, 102)" label="rgb(61, 20, 102)"></option>
-              </select>
-              <span class="ql-format-separator"></span>
-              <select title="Background Color" class="ql-background">
-                <option value="rgb(0, 0, 0)" label="rgb(0, 0, 0)"></option>
-                <option value="rgb(230, 0, 0)" label="rgb(230, 0, 0)"></option>
-                <option value="rgb(255, 153, 0)" label="rgb(255, 153, 0)"></option>
-                <option value="rgb(255, 255, 0)" label="rgb(255, 255, 0)"></option>
-                <option value="rgb(0, 138, 0)" label="rgb(0, 138, 0)"></option>
-                <option value="rgb(0, 102, 204)" label="rgb(0, 102, 204)"></option>
-                <option value="rgb(153, 51, 255)" label="rgb(153, 51, 255)"></option>
-                <option value="rgb(255, 255, 255)" label="rgb(255, 255, 255)" selected></option>
-                <option value="rgb(250, 204, 204)" label="rgb(250, 204, 204)"></option>
-                <option value="rgb(255, 235, 204)" label="rgb(255, 235, 204)"></option>
-                <option value="rgb(255, 255, 204)" label="rgb(255, 255, 204)"></option>
-                <option value="rgb(204, 232, 204)" label="rgb(204, 232, 204)"></option>
-                <option value="rgb(204, 224, 245)" label="rgb(204, 224, 245)"></option>
-                <option value="rgb(235, 214, 255)" label="rgb(235, 214, 255)"></option>
-                <option value="rgb(187, 187, 187)" label="rgb(187, 187, 187)"></option>
-                <option value="rgb(240, 102, 102)" label="rgb(240, 102, 102)"></option>
-                <option value="rgb(255, 194, 102)" label="rgb(255, 194, 102)"></option>
-                <option value="rgb(255, 255, 102)" label="rgb(255, 255, 102)"></option>
-                <option value="rgb(102, 185, 102)" label="rgb(102, 185, 102)"></option>
-                <option value="rgb(102, 163, 224)" label="rgb(102, 163, 224)"></option>
-                <option value="rgb(194, 133, 255)" label="rgb(194, 133, 255)"></option>
-                <option value="rgb(136, 136, 136)" label="rgb(136, 136, 136)"></option>
-                <option value="rgb(161, 0, 0)" label="rgb(161, 0, 0)"></option>
-                <option value="rgb(178, 107, 0)" label="rgb(178, 107, 0)"></option>
-                <option value="rgb(178, 178, 0)" label="rgb(178, 178, 0)"></option>
-                <option value="rgb(0, 97, 0)" label="rgb(0, 97, 0)"></option>
-                <option value="rgb(0, 71, 178)" label="rgb(0, 71, 178)"></option>
-                <option value="rgb(107, 36, 178)" label="rgb(107, 36, 178)"></option>
-                <option value="rgb(68, 68, 68)" label="rgb(68, 68, 68)"></option>
-                <option value="rgb(92, 0, 0)" label="rgb(92, 0, 0)"></option>
-                <option value="rgb(102, 61, 0)" label="rgb(102, 61, 0)"></option>
-                <option value="rgb(102, 102, 0)" label="rgb(102, 102, 0)"></option>
-                <option value="rgb(0, 55, 0)" label="rgb(0, 55, 0)"></option>
-                <option value="rgb(0, 41, 102)" label="rgb(0, 41, 102)"></option>
-                <option value="rgb(61, 20, 102)" label="rgb(61, 20, 102)"></option>
-              </select>
-            </span>
-            <span class="ql-format-group">
-              <span title="List" class="ql-format-button ql-list"></span> <span class="ql-format-separator"></span> <span title="Bullet" class="ql-format-button ql-bullet"></span> <span class="ql-format-separator"></span>
-              <select title="Text Alignment" class="ql-align">
-                <option value="left" label="Left" selected></option>
-                <option value="center" label="Center"></option>
-                <option value="right" label="Right"></option>
-                <option value="justify" label="Justify"></option>
-              </select>
-            </span>
-            <span class="ql-format-group">
-            <span title="Link" class="ql-format-button ql-link"></span> <span class="ql-format-separator"></span>
-            <button type="button" title="Image" class="btn btn-secondary btn-sm" data-toggle="modal" data-target="#modal-media"> <i class="fa fa-image"></i> Media </button>
-            </span> <span class="ql-format-group">
-            </span>
+
+  <section class="section">
+    <div class="row sameheight-container">
+      <div class="col-md-12">
+        <div class="card card-block sameheight-item">
+          <div class="title-block">
+            <h3 class="title">
+              Underlined Inputs
+            </h3>
           </div>
-          <!-- Create the editor container -->
-          <div class="editor"> Hello World </div>
+          <form role="form">
+
+            <div class="row">
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="control-label">First name</label>
+                  <input type="text" class="form-control underlined">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="control-label">Last name</label>
+                  <input type="text" class="form-control underlined">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="control-label">Gender</label>
+
+                  <select>
+                    <option value="F">Option one</option>
+                    <option value="M">Option two</option>
+                  </select>
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="control-label">Birthday</label>
+                  <input type="text" class="form-control underlined">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="control-label">Company</label>
+                  <input type="text" class="form-control underlined">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="control-label">Interesting</label>
+                  <input type="text" class="form-control underlined">
+                </div>
+              </div>
+              <div class="col-md-6">
+                <div class="form-group">
+                  <label class="control-label">URL:</label>
+                  <input type="text" class="form-control underlined" placeholder="https://domain.com">
+                </div>
+              </div>
+              <div class="col-md-12">
+                <div class="form-group">
+                  <label class="control-label">Short description</label>
+                  <textarea rows="3" class="form-control underlined"></textarea>
+                </div>
+              </div>
+            </div>
+
+            <!--
+            <div class="form-group">
+              <label class="control-label">Input Password</label>
+              <input type="password" class="form-control underlined">
+            </div>
+            <div class="form-group">
+              <label class="control-label">Placeholder Input</label>
+              <input type="text" class="form-control underlined" placeholder="Placeholder text">
+            </div>
+            <div class="form-group">
+              <label class="control-label">Disabled Input</label>
+              <input type="text" disabled="disabled" class="form-control underlined" placeholder="Disabled input text">
+            </div>
+            <div class="form-group">
+              <label class="control-label">Static control</label>
+              <p class="form-control-static underlined">email@example.com</p>
+            </div>
+            <div class="form-group">
+              <label class="control-label">Readonly Input</label>
+              <input type="text" readonly="readonly" class="form-control underlined" value="Readonly input text">
+            </div>
+            <div class="form-group">
+              <label class="control-label">Textarea</label>
+              <textarea rows="3" class="form-control underlined"></textarea>
+            </div> -->
+          </form>
         </div>
       </div>
     </div>
-    <div class="form-group row">
-      <label class="col-sm-2 form-control-label text-xs-right"> Category: </label>
-      <div class="col-sm-10">
-        <select class="c-select form-control boxed">
-          <option selected>Select Category</option>
-          <option value="1">One</option>
-          <option value="2">Two</option>
-          <option value="3">Three</option>
-        </select>
-      </div>
-    </div>
-  </form>
-o</article>
+  </section>
+</article>
