--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -3,7 +3,6 @@
     <h3 class="title">
       Edit Users
     </h3>
-    <!-- <p class="title-description"> Sample form elements </p> -->
   </div>
 
   <section class="section">
@@ -13,32 +12,42 @@
           <%= form_for @user, url: admin_user_path(@user), method: :put do |f| %>
             <div class="row">
               <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :first_name, class: 'control-label' %>
-                  <%= f.text_field :first_name, class: 'form-control underlined', autofocus: true  %>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <%= f.label :first_name, class: 'control-label' %>
+                      <%= f.text_field :first_name, class: 'form-control underlined', autofocus: true  %>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <%= f.label :last_name, class: 'control-label' %>
+                      <%= f.text_field :last_name, class: 'form-control underlined', autofocus: true  %>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <%= f.label :gender %>
+                      <%= f.radio_button :gender, :male %>
+                      <%= label :gender, :male %>
+                      <%= f.radio_button :gender, :female %>
+                      <%= label :gender, :female %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :birthday %>
+                      <%= f.date_select :birthday, order: [:day, :month, :year], start_year: 1900 %>
+                    </div>
+                  </div>
                 </div>
               </div>
+
               <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :last_name, class: 'control-label' %>
-                  <%= f.text_field :last_name, class: 'form-control underlined', autofocus: true  %>
-                </div>
+                <%= f.label :avatar %>
+                <%= image_tag @user.avatar(:medium) %>
+                <%= f.file_field :avatar %>
               </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :gender %>
-                  <%= f.radio_button :gender, :male %>
-                  <%= label :gender, :male %>
-                  <%= f.radio_button :gender, :female %>
-                  <%= label :gender, :female %>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :birthday %>
-                  <%= f.date_select :birthday, order: [:day, :month, :year], start_year: 1900 %>
-                </div>
-              </div>
+            </div>
+            <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
                   <%= f.label :company, class: 'control-label' %>
