--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,7 +1,7 @@
 <article class="content forms-page">
   <div class="title-block">
     <h3 class="title">
-      Edit Users
+      Edit User
     </h3>
   </div>
 
@@ -10,6 +10,13 @@
       <div class="col-md-12">
         <div class="card card-block sameheight-item">
           <%= form_for @user, url: admin_user_path(@user), method: :put do |f| %>
+            <div class="row">
+              <div class="col-md-6">
+                <%= f.label :email, class: 'control-label' %>
+                <%= f.email_field :email, class: 'form-control underlined', autofocus: true  %>
+              </div>
+            </div>
+            <br />
             <div class="row">
               <div class="col-md-6">
                 <div class="row">
@@ -42,8 +49,8 @@
               </div>
 
               <div class="col-md-6">
+                <%= image_tag @user.avatar(:medium), style: 'width: 300px; height: 200px;' %> <br />
                 <%= f.label :avatar %>
-                <%= image_tag @user.avatar(:medium) %>
                 <%= f.file_field :avatar %>
               </div>
             </div>
