--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -5,7 +5,7 @@
         <div class="col-md-6">
           <h3 class="title">
             Users
-            <%= link_to "Add New", new_admin_event_path, class: 'btn btn-primary btn-sm rounded-s' %>
+            <%= link_to "Add New", new_admin_user_path, class: 'btn btn-primary btn-sm rounded-s' %>
           </h3>
         </div>
       </div>
@@ -37,7 +37,7 @@
         </tr>
         <% @users.each do |user| %>
         <tr>
-          <td><%= user.first_name %></td>
+          <td><%= image_tag(user.avatar(:thumb), style: 'width: 64px; height 64px;') %></td>
           <td><%= user.last_name %></td>
           <td><%= user.gender %></td>
           <td><%= user.role.name %></td>
@@ -49,7 +49,7 @@
     </div>
 
   </div>
-
+<!--
     <nav class="text-xs-right">
         <ul class="pagination">
             <li class="page-item">
@@ -88,5 +88,5 @@
                 </a>
             </li>
         </ul>
-    </nav>
+    </nav> -->
 </article>
