--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,7 +1,7 @@
 <article class="content forms-page">
   <div class="title-block">
     <h3 class="title">
-      Edit Users
+      Create User
     </h3>
   </div>
 
@@ -9,35 +9,52 @@
     <div class="row sameheight-container">
       <div class="col-md-12">
         <div class="card card-block sameheight-item">
-          <%= form_for @user, url: admin_user_path(@user), method: :put do |f| %>
+          <%= form_for @user, url: admin_users_path, method: :post do |f| %>
             <div class="row">
               <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :first_name, class: 'control-label' %>
-                  <%= f.text_field :first_name, class: 'form-control underlined', autofocus: true  %>
-                </div>
+                <%= f.label :email, class: 'control-label' %>
+                <%= f.email_field :email, class: 'form-control underlined', autofocus: true  %>
               </div>
+            </div>
+            <br />
+            <div class="row">
               <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :last_name, class: 'control-label' %>
-                  <%= f.text_field :last_name, class: 'form-control underlined', autofocus: true  %>
+                <div class="row">
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <%= f.label :first_name, class: 'control-label' %>
+                      <%= f.text_field :first_name, class: 'form-control underlined', autofocus: true  %>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <%= f.label :last_name, class: 'control-label' %>
+                      <%= f.text_field :last_name, class: 'form-control underlined', autofocus: true  %>
+                    </div>
+                  </div>
+                  <div class="col-md-12">
+                    <div class="form-group">
+                      <%= f.label :gender %>
+                      <%= f.radio_button :gender, :male %>
+                      <%= label :gender, :male %>
+                      <%= f.radio_button :gender, :female %>
+                      <%= label :gender, :female %>
+                    </div>
+                    <div class="form-group">
+                      <%= f.label :birthday %>
+                      <%= f.date_select :birthday, order: [:day, :month, :year], start_year: 1900 %>
+                    </div>
+                  </div>
                 </div>
               </div>
+
               <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :gender %>
-                  <%= f.radio_button :gender, :male %>
-                  <%= label :gender, :male %>
-                  <%= f.radio_button :gender, :female %>
-                  <%= label :gender, :female %>
-                </div>
+                <%= image_tag @user.avatar(:medium), style: 'width: 300px; height: 200px;' %> <br />
+                <%= f.label :avatar %>
+                <%= f.file_field :avatar %>
               </div>
-              <div class="col-md-6">
-                <div class="form-group">
-                  <%= f.label :birthday %>
-                  <%= f.date_select :birthday, order: [:day, :month, :year], start_year: 1900 %>
-                </div>
-              </div>
+            </div>
+            <div class="row">
               <div class="col-md-6">
                 <div class="form-group">
                   <%= f.label :company, class: 'control-label' %>
