--- a/app/views/admin/events/index.html.erb
+++ b/app/views/admin/events/index.html.erb
@@ -4,8 +4,8 @@
       <div class="row">
         <div class="col-md-6">
           <h3 class="title">
-            Users
-            <%= link_to "Add New", new_admin_user_path, class: 'btn btn-primary btn-sm rounded-s' %>
+            Event
+            <%= link_to "Add New", new_admin_event_path, class: 'btn btn-primary btn-sm rounded-s' %>
           </h3>
         </div>
       </div>
@@ -28,20 +28,20 @@
     <div class="panel panel-default">
       <table class="table table-striped">
         <tr>
-          <th>Picture</th>
-          <th>Name</th>
-          <th>Gender</th>
-          <th>Role</th>
-          <th>Joined At</th>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Organizer</th>
+          <th>Categories</th>
+          <th>Price</th>
           <th>Action</th>
         </tr>
-        <% @events.each do |user| %>
+        <% @events.each do |event| %>
         <tr>
-          <td><%= user.first_name %></td>
-          <td><%= user.last_name %></td>
-          <td><%= user.gender %></td>
-          <td><%= user.role.name %></td>
-          <td><%= user.created_at %></td>
+          <td><%= event.title %></td>
+          <td><%= event.description %></td>
+          <td><%= event.user.name %></td>
+          <td><%= event.category.title %></td>
+          <td><%= event.price %></td>
           <td><%= link_to "Edit", edit_admin_user_path(user.id) %></td>
         </tr>
         <% end %>
