--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -4,16 +4,17 @@
       Add new item <span class="sparkline bar" data-type="bar"></span>
     </h3>
   </div>
-  <form name="item">
+  <%= form_for @event, url: admin_events_path, medthod: :post  do |f| %>
     <div class="card card-block">
       <div class="form-group row">
-        <label class="col-sm-2 form-control-label text-xs-right"> Name: </label>
+        <%= f.label :title, class: 'col-sm-2 form-control-label text-xs-right' %>
         <div class="col-sm-10">
-          <input type="text" class="form-control boxed" placeholder="">
+          <%= f.text_field :title, class: 'form-control boxed', autofocus: true  %>
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-2 form-control-label text-xs-right"> Content: </label>
+        <%= f.label :content, class: 'col-sm-2 form-control-label text-xs-right' %>
+
         <div class="col-sm-10">
           <div class="wyswyg">
             <div class="toolbar">
@@ -125,14 +126,9 @@
         </div>
       </div>
       <div class="form-group row">
-        <label class="col-sm-2 form-control-label text-xs-right"> Category: </label>
+        <%= f.label :category, class: 'col-sm-2 form-control-label text-xs-right' %>
         <div class="col-sm-10">
-          <select class="c-select form-control boxed">
-            <option selected>Select Category</option>
-            <option value="1">One</option>
-            <option value="2">Two</option>
-            <option value="3">Three</option>
-          </select>
+          <%= f.select :category, options_for_select(@categories.collect{ |c| [c.title, c.id] }, "Select Category") %>
         </div>
       </div>
       <div class="form-group row">
@@ -142,11 +138,7 @@
             <div class="image-container">
               <div class="controls">
                 <a href="" class="control-btn move"> <i class="fa fa-arrows"></i> </a>
-                <!--
-                  -->
                 <a href="" class="control-btn star"> <i class="fa"></i> </a>
-                <!--
-                  -->
                 <a href="#" class="control-btn remove" data-toggle="modal" data-target="#confirm-modal"> <i class="fa fa-trash-o"></i> </a>
               </div>
               <div class="image" style="background-image:url('https://s3.amazonaws.com/uifaces/faces/twitter/brad_frost/128.jpg')"></div>
@@ -189,11 +181,5 @@
         </div>
       </div>
     </div>
-  </form>
+  <% end %>
 </article>
-
-<script type="text/javascript">
- $(ducument).ready(function(){
-
- });
-</script>
