--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -4,7 +4,7 @@
       <div class="row">
         <div class="col-md-6">
           <h3 class="title">
-            Users
+            User
             <%= link_to "Add New", new_admin_user_path, class: 'btn btn-primary btn-sm rounded-s' %>
           </h3>
         </div>
