--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,7 +1,7 @@
 <article class="content forms-page">
   <div class="title-block">
     <h3 class="title">
-      Create User
+      Add new user
     </h3>
   </div>
 
