--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -1,7 +1,7 @@
 <article class="content item-editor-page">
   <div class="title-block">
     <h3 class="title">
-      Edit Profile<span class="sparkline bar" data-type="bar"></span>
+      Edit profile<span class="sparkline bar" data-type="bar"></span>
     </h3>
   </div>
   <form name="item">
