--- a/app/views/admin/events/new.html.erb
+++ b/app/views/admin/events/new.html.erb
@@ -1,7 +1,7 @@
 <article class="content item-editor-page">
   <div class="title-block">
     <h3 class="title">
-      Add new item <span class="sparkline bar" data-type="bar"></span>
+      Add new event <span class="sparkline bar" data-type="bar"></span>
     </h3>
   </div>
   <%= form_for @event, url: admin_events_path, medthod: :post  do |f| %>
