--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -1,7 +1,7 @@
 <article class="content forms-page">
   <div class="title-block">
     <h3 class="title">
-      Edit User
+      Edit user
     </h3>
   </div>
 
