--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -1,8 +1,8 @@
 
 @font-face {
   font-family: 'FontAwesome';
-  src: font_url('fontawesome-webfont.eot?v=4.3.0');
-  src: font_url('fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), font_url('fontawesome-webfont.woff2?v=4.3.0') format('woff2'), font_url('fontawesome-webfont.woff?v=4.3.0') format('woff'), font_url('fontawesome-webfont.ttf?v=4.3.0') format('truetype'), font_url('fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
+  src: asset-url('fontawesome-webfont.eot?v=4.3.0');
+  src: asset-url('fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), asset-url('fontawesome-webfont.woff2?v=4.3.0') format('woff2'), asset-url('fontawesome-webfont.woff?v=4.3.0') format('woff'), asset-url('fontawesome-webfont.ttf?v=4.3.0') format('truetype'), asset-url('fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
