--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -1,8 +1,9 @@
 
+<% v = 4.3.0 %>
 @font-face {
   font-family: 'FontAwesome';
-  src: asset-url('fontawesome-webfont.eot?v=4.3.0');
-  src: asset-url('fontawesome-webfont.eot?#iefix&v=4.3.0') format('embedded-opentype'), asset-url('fontawesome-webfont.woff2?v=4.3.0') format('woff2'), asset-url('fontawesome-webfont.woff?v=4.3.0') format('woff'), asset-url('fontawesome-webfont.ttf?v=4.3.0') format('truetype'), asset-url('fontawesome-webfont.svg?v=4.3.0#fontawesomeregular') format('svg');
+  src: url('<%= font_path('fontawesome-webfont.eot') %>?v=<%= v %>');
+  src: url('<%= font_path('fontawesome-webfont.eot') %>?#iefix&v=<%= v %>') format('embedded-opentype'), url('<%= font_path('fontawesome-webfont.woff2') %>?v=<%= v %>') format('woff2'), url('<%= font_path('fontawesome-webfont.woff') %>?v=<%= v %>') format('woff'), url('<%= font_path('fontawesome-webfont.ttf') %>?v=<%= v %>') format('truetype'), url('<%= font_path('fontawesome-webfont.svg') %>?v=<%= v %>#fontawesomeregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
