fix text editor

--- a/app/views/admin/events/edit.html.erb
+++ b/app/views/admin/events/edit.html.erb
@@ -121,7 +121,7 @@
               </span>
             </div>
             <!-- Create the editor container -->
-            <div class="editor"></div>
+            <div class="editor"><%= @event.description %></div>
             <%= f.text_area :description, style: 'display: none', rows: 3 %>
           </div>
         </div>
