--- a/app/views/admin/_aside.html.erb
+++ b/app/views/admin/_aside.html.erb
@@ -15,24 +15,11 @@
             </div>
             <nav class="menu">
                 <ul class="nav metismenu" id="sidebar-menu">
-                    <li>
-                      <%= link_to admin_path do %>
-                        <i class="fa fa-home"></i>
-                        Dashboard
-                      <% end %>
-                    </li>
-                    <li>
-                      <%= link_to admin_events_path do %>
-                        <i class="fa fa-home"></i>
-                        Events
-                      <% end %>
-                    </li>
-                    <li>
-                      <%= link_to admin_users_path do %>
-                        <i class="fa fa-home"></i>
-                        Users
-                      <% end %>
-                    </li>
+
+                    <%= nav_link 'Deshboard', admin_path %>
+                    <%= nav_link 'Events', admin_events_path %>
+                    <%= nav_link 'Users', admin_users_path %>
+
                     <!-- <li>
                         <a href="">
                             <i class="fa fa-th-large"></i>
