--- a/app/views/layouts/management.html.erb
+++ b/app/views/layouts/management.html.erb
@@ -28,6 +28,17 @@
     <![endif]-->
     <script src="/assets/js/modernizr.min.js"></script>
 
+    <!-- Plugins css-->
+    <link href="/assets/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.css" rel="stylesheet" />
+    <link href="/assets/plugins/multiselect/css/multi-select.css"  rel="stylesheet" type="text/css" />
+    <link href="/assets/plugins/select2/select2.css" rel="stylesheet" type="text/css" />
+    <link href="/assets/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.css" rel="stylesheet" />
+    <link href="/assets/plugins/timepicker/bootstrap-timepicker.min.css" rel="stylesheet">
+    <link href="/assets/plugins/mjolnic-bootstrap-colorpicker/dist/css/bootstrap-colorpicker.min.css" rel="stylesheet">
+    <link href="/assets/plugins/bootstrap-datepicker/dist/css/bootstrap-datepicker.min.css" rel="stylesheet">
+    <link href="/assets/plugins/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="/assets/plugins/switchery/switchery.min.css" rel="stylesheet" />
+
     <link href="/assets/plugins/dropzone/dist/dropzone.css" rel="stylesheet" type="text/css" />
 
     <%= stylesheet_link_tag    'management', media: 'all', 'data-turbolinks-track' => true %>
